changing file structure and restrucutring the code

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -54,6 +54,8 @@ $input-border-radius: 20px;
 
 $primary: rgba(33, 63, 127, 0.865);
 $secondary: rgb(221, 221, 221);
+$gray-900: #464e55 ;
+$dark:      $gray-900;     
 
 $display-font-sizes: (
   1: 5rem,
